CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(CMAKE_CXX_STANDARD 11)
#SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_CXX_FLAGS "-O0")
#SET(CMAKE_C_FLAGS "-O0")

PROJECT(main)

ADD_EXECUTABLE(main aux.cpp ReWeight.cpp Analysis.cpp Analysis_ReadData.cpp Analysis_CanvasFunctions.cpp Analysis_EventLoopFunctions.cpp Analysis_SensitivityFunctions.cpp main.cpp)
ADD_EXECUTABLE(createtree ReWeight.cpp createtree.cpp)
ADD_EXECUTABLE(sensitivity sensitivity.cpp)
ADD_EXECUTABLE(canvas_test canvas_test.cpp)

FIND_PACKAGE(ROOT REQUIRED)
MESSAGE(STATUS "CMAKE_PREFIX_PATH=" ${CMAKE_PREFIX_PATH})
MESSAGE(STATUS "ROOT_INCLUDE_DIRS=" ${ROOT_INCLUDE_DIRS})
MESSAGE(STATUS "ROOT_LIBRARIES=" ${ROOT_LIBRARIES})
LIST(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})

# add the vector 3 library folder
INCLUDE_DIRECTORIES("include")
#INCLUDE_DIRECTORIES("~/Vector3")
INCLUDE_DIRECTORIES("~/CERN-ROOT-Canvas-Factory")
INCLUDE_DIRECTORIES("~/Numerical-String-Format")
INCLUDE_DIRECTORIES("~/CPP-Debug")
INCLUDE_DIRECTORIES("~/Program-Arguments")


INCLUDE_DIRECTORIES(${ROOT_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(main ${ROOT_LIBRARIES})
TARGET_LINK_LIBRARIES(createtree ${ROOT_LIBRARIES})
TARGET_LINK_LIBRARIES(sensitivity ${ROOT_LIBRARIES})
TARGET_LINK_LIBRARIES(canvas_test ${ROOT_LIBRARIES})
